--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <hi>Correo: gjimenez06@itsinfocom.com</hi>
+    <p>Estudiante</p>
 </body>
     <script src="app.js"></script>
 </html>
